Assertion when encountering U_OTHER_NEUTRAL in createBidiRunsForLine at end of run https://bugs.webkit.org/show_bug.cgi?id=204485

Patch by Doug Kelly <dougk@apple.com> on 2019-12-03
Reviewed by Ryosuke Niwa.

Source/WebCore:

Comment out the assert for the default case when setting direction at
the end of a bidirectional run.  The current algorithm may not fully
support UAX #9, but this assert also isn't helpful in development.

Test: fast/text/international/unicode-bidi-other-neutrals.html

* platform/text/BidiResolver.h:
(WebCore::DerivedClass>::createBidiRunsForLine):

LayoutTests:

Add a simple test case which illustrates a neutral at the end of a
Unicode bidirectional run.

* fast/text/international/unicode-bidi-other-neutrals-expected.html: Added.
* fast/text/international/unicode-bidi-other-neutrals.html: Added.

Canonical link: https://commits.webkit.org/218032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253068 268f45cc-cd09-0410-ab3c-d52691b4dbfc